--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="backNavBarAplication">#253341</color>
     <color name="blueAplication">#1D9BF0</color>
     <color name="grayAplication">#AAB8C2</color>
-
+    <color name="BackgrroundAplication">#15202B</color>
 
 
 </resources>
